--- a/index.html
+++ b/index.html
@@ -3,42 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <title>Calendar Office Hibrid</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f6f8fa; margin: 0; padding: 0; }
-    .container { max-width: 900px; margin: 32px auto; background: #fff; border-radius: 12px; padding: 24px; box-shadow: 0 2px 8px #0001; }
-    .calendar-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 4px; margin-top: 16px; }
-    .day { background: #f5f5f5; border-radius: 6px; min-height: 70px; padding: 4px; position: relative; }
-    .today { border: 2px solid #2196f3; }
-    .worked-office { background: #e3f2fd; }
-    .free { background: #e8f5e9; }
-    .remote-work { background: #fff3e0; }
-    .weekend { background: #f0f0f0; color: #bbb; }
-    .holiday-weekend { background: #ffe0e0; }
-    .calendar-grid select { width: 100%; margin-top: 4px; }
-    #monthTitle { text-align: center; font-size: 1.5em; margin: 12px 0; }
-    #summary { margin: 16px 0; }
-    #userProfile { margin: 16px 0; }
-    button { margin: 4px; padding: 6px 16px; border: none; border-radius: 6px; background: #2196f3; color: #fff; cursor: pointer; font-size: 1em; }
-    button:hover { background: #1976d2; }
-    .bulina { display:inline-block;width:18px;height:18px;border-radius:50%;background:#2196f3;color:#fff;text-align:center;line-height:18px;font-size:12px;margin-right:2px; }
-    .dark-mode { background: #222; color: #eee; }
-    .dark-mode .container { background: #292929; }
-    .dark-mode .day { background: #333; color: #eee; }
-    .dark-mode .worked-office { background: #1e3a5c; }
-    .dark-mode .free { background: #1b5e20; }
-    .dark-mode .remote-work { background: #8d6e63; }
-    .dark-mode button { background: #1565c0; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <button id="toggleThemeBtn">Comută temă întunecată</button>
-    <div style="display:flex;justify-content:space-between;align-items:center;">
+    <div id="calendarHeader">
+      <button id="toggleThemeBtn">Comută temă întunecată</button>
       <button id="prevBtn">← Luna Anterioară</button>
-      <div id="monthTitle"></div>
+      <h2 id="monthTitle"></h2>
       <button id="nextBtn">Luna Următoare →</button>
       <button id="toggleWeekViewBtn">Vizualizare săptămânală</button>
     </div>
+
+    <div class="section-card">
+      <label>Utilizator: <input id="userInput" type="text" placeholder="Nume utilizator" /></label>
+      <button id="addUserBtn">Adaugă utilizator</button>
+      <label><input type="checkbox" id="teamView"> Vizualizare echipă</label>
+    </div>
+
+    <div class="section-card">
+      <button id="exportBtn">Export</button>
+      <button id="importBtn">Import</button>
+      <input type="file" id="importInput" style="display:none;">
+      <button id="resetBtn">Resetare lună</button>
+      <button id="bulkOfficeBtn">Toate Office</button>
+      <button id="bulkHomeBtn">Toate Home</button>
+    </div>
+
+    <div class="section-card">
+      <input type="date" id="holidayDate">
+      <input type="text" id="holidayName" placeholder="Nume sărbătoare">
+      <button id="addHolidayBtn">Adaugă sărbătoare</button>
+      <div id="customHolidaysList"></div>
+    </div>
+
+    <div class="section-card">
+      <select id="filterType">
+        <option value="">Toate tipurile</option>
+        <option value="office">Office</option>
+        <option value="home">Home</option>
+        <option value="vacation">Vacanță</option>
+      </select>
+      <input id="filterUser" type="text" placeholder="Filtru utilizator (echipă)">
+      <button id="filterBtn">Filtrează</button>
+      <button id="resetFilterBtn">Resetează</button>
+    </div>
+
+    <div class="section-card">
+      <button id="statsBtn">Statistici lunare</button>
+      <div id="statsContainer"></div>
+    </div>
+
     <div id="userProfile"></div>
     <div id="calendarGrid" class="calendar-grid"></div>
     <div id="summary"></div>
